<?xml version="1.0"?>
<package format="2">
  <name>vgraph_planner</name>
  <version>0.0.0</version>
  <description>The vgraph_planner package</description>
  <maintainer email="zip@todo.todo">Alpaca-zip</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
